# apple-music-current-song

./: .gitignore  AppleMusicFindCurrentSong.sln  CMakeLists.txt  CMakePresets.json  README.md
AppleMusicFindCurrentSong/: AppleMusicFindCurrentSong.cpp  AppleMusicFindCurrentSong.vcxproj  AppleMusicPlayer.cpp  AppleMusicPlayer.h
AppleMusicPlayer/: AppleMusicPlayer.cpp  AppleMusicPlayer.h  AppleMusicPlayer.vcxproj  AppleMusicPlayer.vcxproj.filters
AppleMusicPlayerUnitTest/: AppleMusicPlayerUnitTest.cpp  AppleMusicPlayerUnitTest.vcxproj
scripts/: parse_datetime.py  thecuefile.cue  write_cue_file.py
src/AppleMusicFindCurrentSong/: AppleMusicFindCurrentSong.cpp  CMakeLists.txt
src/AppleMusicPlayer/: AppleMusicPlayer.cpp  CMakeLists.txt
src/AppleMusicPlayerMac/: AppleMusicPlayer.cpp  CMakeLists.txt
src/AppleMusicPlayerUnitTest/: AppleMusicPlayerUnitTest.vcxproj.filters
src/include/: AppleMusicPlayer.h
